crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__fra-conversation.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "fra"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "fra"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Investigator",
            "speaker_code": "CHR"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;09.06",
        "corpus": "Champaud",
        "language": [
          "fra"
        ],
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "Champaud",
        "language": [
          "fra"
        ],
        "role": "Investigator",
        "speaker": "CHR",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "French early child language acquisition data",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: French language coverage, Latin script",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "merci",
                  "pos": "intj"
                }
              }
            ],
            "terminator": {
              "type": "exclamation"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "merci",
              "content": [
                {
                  "content": "merci",
                  "type": "text"
                }
              ],
              "raw_text": "merci",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "exclamation"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "sil",
                  "pos": "intj"
                }
              },
              {
                "main": {
                  "features": [
                    "Prs",
                    "S2"
                  ],
                  "lemma": "toi",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres",
                    "S2"
                  ],
                  "lemma": "plaire",
                  "pos": "verb"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 3,
                "index": 1,
                "relation": "DISCOURSE"
              },
              {
                "head": 3,
                "index": 2,
                "relation": "OBJ"
              },
              {
                "head": 0,
                "index": 3,
                "relation": "ROOT"
              },
              {
                "head": 3,
                "index": 4,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "s'il",
              "content": [
                {
                  "content": "s'il",
                  "type": "text"
                }
              ],
              "raw_text": "s'il",
              "type": "word"
            },
            {
              "cleaned_text": "te",
              "content": [
                {
                  "content": "te",
                  "type": "text"
                }
              ],
              "raw_text": "te",
              "type": "word"
            },
            {
              "cleaned_text": "plaît",
              "content": [
                {
                  "content": "plaît",
                  "type": "text"
                }
              ],
              "raw_text": "plaît",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Fem",
                    "Def",
                    "Art",
                    "Sing"
                  ],
                  "lemma": "le",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "features": [
                    "Fem"
                  ],
                  "lemma": "soupe",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "features": [
                    "Inf",
                    "S"
                  ],
                  "lemma": "manger",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres",
                    "S3"
                  ],
                  "lemma": "vouloir",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "lemma": "pas",
                  "pos": "adv"
                }
              },
              {
                "main": {
                  "features": [
                    "Acc"
                  ],
                  "lemma": "Grégoire",
                  "pos": "propn"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 2,
                "index": 1,
                "relation": "DET"
              },
              {
                "head": 4,
                "index": 2,
                "relation": "NSUBJ"
              },
              {
                "head": 2,
                "index": 3,
                "relation": "ACL"
              },
              {
                "head": 0,
                "index": 4,
                "relation": "ROOT"
              },
              {
                "head": 4,
                "index": 5,
                "relation": "ADVMOD"
              },
              {
                "head": 4,
                "index": 6,
                "relation": "OBJ"
              },
              {
                "head": 4,
                "index": 7,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "la",
              "content": [
                {
                  "content": "la",
                  "type": "text"
                }
              ],
              "raw_text": "la",
              "type": "word"
            },
            {
              "cleaned_text": "soupe",
              "content": [
                {
                  "content": "soupe",
                  "type": "text"
                }
              ],
              "raw_text": "soupe",
              "type": "word"
            },
            {
              "cleaned_text": "manger",
              "content": [
                {
                  "content": "manger",
                  "type": "text"
                }
              ],
              "raw_text": "manger",
              "type": "word"
            },
            {
              "cleaned_text": "veut",
              "content": [
                {
                  "content": "veut",
                  "type": "text"
                }
              ],
              "raw_text": "veut",
              "type": "word"
            },
            {
              "cleaned_text": "pas",
              "content": [
                {
                  "content": "pas",
                  "type": "text"
                }
              ],
              "raw_text": "pas",
              "type": "word"
            },
            {
              "cleaned_text": "Grégoire",
              "content": [
                {
                  "content": "Grégoire",
                  "type": "text"
                }
              ],
              "raw_text": "Grégoire",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Fem",
                    "Plur"
                  ],
                  "lemma": "chaussure",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "lemma": "Victor",
                  "pos": "propn"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 0,
                "index": 1,
                "relation": "ROOT"
              },
              {
                "head": 1,
                "index": 2,
                "relation": "APPOS"
              },
              {
                "head": 1,
                "index": 3,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "chaussures",
              "content": [
                {
                  "content": "chaussures",
                  "type": "text"
                }
              ],
              "raw_text": "chaussures",
              "type": "word"
            },
            {
              "cleaned_text": "Victor",
              "content": [
                {
                  "content": "Victor",
                  "type": "text"
                }
              ],
              "raw_text": "Victor",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Masc"
                  ],
                  "lemma": "grégoire",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "lemma": "cm",
                  "pos": "cm"
                }
              },
              {
                "main": {
                  "lemma": "ou",
                  "pos": "cconj"
                }
              },
              {
                "main": {
                  "features": [
                    "Fin",
                    "Ind",
                    "Pres",
                    "S3"
                  ],
                  "lemma": "être",
                  "pos": "aux"
                }
              },
              {
                "main": {
                  "features": [
                    "Masc",
                    "Def",
                    "Art",
                    "Sing"
                  ],
                  "lemma": "le",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "features": [
                    "Masc"
                  ],
                  "lemma": "jouet",
                  "pos": "noun"
                }
              }
            ],
            "terminator": {
              "type": "question"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 6,
                "index": 1,
                "relation": "DISLOCATED"
              },
              {
                "head": 6,
                "index": 2,
                "relation": "PUNCT"
              },
              {
                "head": 6,
                "index": 3,
                "relation": "CC"
              },
              {
                "head": 6,
                "index": 4,
                "relation": "COP"
              },
              {
                "head": 6,
                "index": 5,
                "relation": "DET"
              },
              {
                "head": 0,
                "index": 6,
                "relation": "ROOT"
              },
              {
                "head": 6,
                "index": 7,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "cleaned_text": "grégoire",
              "content": [
                {
                  "content": "grégoire",
                  "type": "text"
                }
              ],
              "raw_text": "grégoire",
              "type": "word"
            },
            {
              "kind": "comma",
              "type": "separator"
            },
            {
              "cleaned_text": "ou",
              "content": [
                {
                  "content": "ou",
                  "type": "text"
                }
              ],
              "raw_text": "ou",
              "type": "word"
            },
            {
              "cleaned_text": "est",
              "content": [
                {
                  "content": "est",
                  "type": "text"
                }
              ],
              "raw_text": "est",
              "type": "word"
            },
            {
              "cleaned_text": "le",
              "content": [
                {
                  "content": "le",
                  "type": "text"
                }
              ],
              "raw_text": "le",
              "type": "word"
            },
            {
              "cleaned_text": "jouet",
              "content": [
                {
                  "content": "jouet",
                  "type": "text"
                }
              ],
              "raw_text": "jouet",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "CHR"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;09.06",
        "corpus": "Champaud",
        "language": [
          "fra"
        ],
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    },
    "CHR": {
      "birth_date": null,
      "code": "CHR",
      "id": {
        "corpus": "Champaud",
        "language": [
          "fra"
        ],
        "role": "Investigator",
        "speaker": "CHR"
      },
      "name": null,
      "role": "Investigator"
    }
  }
}
