crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__freeannotation.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Child",
            "speaker_code": "CHI"
          },
          {
            "name": null,
            "role": "Mother",
            "speaker_code": "MOT"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "freecodes in various places",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hello",
                  "type": "text"
                }
              ],
              "raw_text": "hello",
              "span": {
                "end": 197,
                "start": 192
              },
              "type": "word"
            },
            {
              "text": "huh: what",
              "type": "freecode"
            },
            {
              "content": [
                {
                  "content": "there",
                  "type": "text"
                }
              ],
              "raw_text": "there",
              "span": {
                "end": 217,
                "start": 212
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "this",
                        "type": "text"
                      }
                    ],
                    "raw_text": "this",
                    "span": {
                      "end": 231,
                      "start": 227
                    },
                    "type": "word"
                  },
                  {
                    "content": [
                      {
                        "content": "is",
                        "type": "text"
                      }
                    ],
                    "raw_text": "is",
                    "span": {
                      "end": 234,
                      "start": 232
                    },
                    "type": "word"
                  },
                  {
                    "text": "huh",
                    "type": "freecode"
                  },
                  {
                    "content": [
                      {
                        "content": "mother",
                        "type": "text"
                      }
                    ],
                    "raw_text": "mother",
                    "span": {
                      "end": 249,
                      "start": 243
                    },
                    "type": "word"
                  },
                  {
                    "text": "right",
                    "type": "freecode"
                  },
                  {
                    "content": [
                      {
                        "content": "speaking",
                        "type": "text"
                      }
                    ],
                    "raw_text": "speaking",
                    "span": {
                      "end": 268,
                      "start": 260
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "text": "foo",
                  "type": "explanation"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "sucks",
                  "type": "text"
                }
              ],
              "raw_text": "sucks",
              "span": {
                "end": 283,
                "start": 278
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": {
                "content": [
                  {
                    "content": [
                      {
                        "content": "hello",
                        "type": "text"
                      }
                    ],
                    "raw_text": "hello",
                    "span": {
                      "end": 298,
                      "start": 293
                    },
                    "type": "word"
                  },
                  {
                    "text": "huh: what",
                    "type": "freecode"
                  },
                  {
                    "content": [
                      {
                        "content": "there",
                        "type": "text"
                      }
                    ],
                    "raw_text": "there",
                    "span": {
                      "end": 318,
                      "start": 313
                    },
                    "type": "word"
                  }
                ]
              },
              "scoped_annotations": [
                {
                  "text": "foo",
                  "type": "explanation"
                }
              ],
              "type": "annotated_group"
            },
            {
              "content": [
                {
                  "content": "sucks",
                  "type": "text"
                }
              ],
              "raw_text": "sucks",
              "span": {
                "end": 333,
                "start": 328
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Child",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "bates",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": null,
      "role": "Mother"
    }
  }
}
