crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__g.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": "Kelly",
            "role": "Mother",
            "speaker_code": "MOT"
          },
          {
            "name": "Nicolette",
            "role": "Target_Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;10.04",
        "corpus": "sample",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "transcript group",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "label": "3a ? = monkey is eating banana, 3b ? = squirrel is eating banana, 3c ? = bunny is eating banana",
        "type": "lazy_gem"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "hi",
                  "type": "text"
                }
              ],
              "raw_text": "hi",
              "span": {
                "end": 306,
                "start": 304
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "MOT"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;10.04",
        "corpus": "sample",
        "language": "eng",
        "role": "Target_Child",
        "speaker": "CHI"
      },
      "name": "Nicolette",
      "role": "Target_Child"
    },
    "MOT": {
      "birth_date": null,
      "code": "MOT",
      "id": {
        "corpus": "sample",
        "language": "eng",
        "role": "Mother",
        "speaker": "MOT"
      },
      "name": "Kelly",
      "role": "Mother"
    }
  }
}
